...
        self.title = "NY Times Most Popular"
    }
    
    /// Setup Table View properties
    func setupTableView(){
        
        self.tableView.accessibilityLabel = "ArticlesListTableView"
        self.tableView.isAccessibilityElement = true
        self.tableView.tableFooterView = UIView()
        self.tableView.register(ArticleListViewCell.self, forCellReuseIdentifier: AppReuseIdentifierStrings.kArticlesListViewCellReuseIdentifier )

        
        self.refreshControl = UIRefreshControl()
...
